== 0.0.3

* Added an option for permanently excluded models to the config file

== 0.0.2

* Major code refactoring
* Documentation update

== 0.0.1

* Initial release.  Works but not pretty.