@@ -1,3 +1,7 @@
+== unreleased changes
+
+* Improved performacne of the recursive word cloud by avoiding calling it multiple times on the same object
+
 == 0.0.3
 
 * Added an option for permanently excluded models to the config file
